--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Streamdata Gallery
 url: dyn.api.streamdata.gallery
-tag: Temmplate
+tag: Dyn
 markdown: kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", ".DS_Store"]
 github_user: streamdata-gallery-organizations
